@@ -3,6 +3,14 @@
 __author__ = 'Steve McMahon <steve@dcn.org>'
 __docformat__ = 'plaintext'
 
+try:
+    import xlwt
+    has_xls = True
+except ImportError:
+    has_xls = False
+
+from urlparse import urlparse
+
 from AccessControl import ClassSecurityInfo
 
 from BTrees.IOBTree import IOBTree
@@ -373,8 +381,10 @@ class FormSaveDataAdapter(FormActionAdapter):
     def getColumnTitles(self, excludeServerSide=True):
         # """Returns a list of column titles"""
 
+        showFields = getattr(self, 'showFields', [])
         names = [field.widget.label for field
-                 in self.fgFields(displayOnly=True, excludeServerSide=excludeServerSide)]
+                 in self.fgFields(displayOnly=True, excludeServerSide=excludeServerSide)
+                 if not showFields or field.getName() in showFields]
         for f in self.ExtraData:
             names.append(self.vocabExtraDataDL().getValue(f, ''))
 
@@ -434,6 +444,49 @@ class FormSaveDataAdapter(FormActionAdapter):
 
         return '%s%s' % (res, self.getSavedFormInputForEdit())
 
+    security.declareProtected(DOWNLOAD_SAVED_PERMISSION, 'download_xls')
+    def download_xls(self, REQUEST=None, RESPONSE=None):
+        # """Download the saved data
+        # """
+        filename = self.id
+        if filename.find('.') < 0:
+            filename = '%s.xls' % filename
+        header_value = contentDispositionHeader('attachment', self.getCharset(), filename=filename)
+        RESPONSE.setHeader("Content-Disposition", header_value)
+        RESPONSE.setHeader("Content-Type", 'application/vnd.ms-excel')
+
+        xldoc = xlwt.Workbook(encoding=self.getCharset())
+        sheet = xldoc.add_sheet(self.Title())
+
+        row_num = 0
+
+        if getattr(self, 'UseColumnNames', False):
+            col_names = self.getColumnNames(excludeServerSide=False)
+            for idx, label in enumerate(col_names):
+                sheet.write(0, idx, label.encode(self.getCharset()))
+            row_num += 1
+
+        for row in self.getSavedFormInput():
+            for col_num, col in enumerate(row):
+                if type(col) is unicode:
+                    col = col.encode(self.getCharset())
+
+                if urlparse(col).scheme in ('http', 'https'):
+                    col = xlwt.Formula('HYPERLINK("%(url)s")' % dict(url=col))
+                else:
+                    for format in (int, float):
+                        try:
+                            col = format(col)
+                            break
+                        except ValueError:
+                            pass
+
+                sheet.write(row_num, col_num, col)
+            row_num += 1
+
+        string_buffer = StringIO()
+        xldoc.save(string_buffer)
+        return string_buffer.getvalue()
 
     security.declareProtected(DOWNLOAD_SAVED_PERMISSION, 'download')
     def download(self, REQUEST=None, RESPONSE=None):
@@ -443,6 +496,9 @@ class FormSaveDataAdapter(FormActionAdapter):
         format = getattr(self, 'DownloadFormat', 'tsv')
         if format == 'tsv':
             return self.download_tsv(REQUEST, RESPONSE)
+        if format == 'xls':
+            assert has_xls, 'xls download not available'
+            return self.download_xls(REQUEST, RESPONSE)
         else:
             assert format == 'csv', 'Unknown download format'
             return self.download_csv(REQUEST, RESPONSE)
@@ -490,6 +546,8 @@ class FormSaveDataAdapter(FormActionAdapter):
         format = getattr(self, 'DownloadFormat', 'tsv')
         if format == 'tsv':
             return 'text/tab-separated-values'
+        if format == 'xls':
+            return 'application/vnd.ms-excel'
         else:
             assert format == 'csv', 'Unknown download format'
             return 'text/comma-separated-values'
@@ -530,19 +588,27 @@ class FormSaveDataAdapter(FormActionAdapter):
 
     def vocabFormatDL(self):
         # """ returns vocabulary for format """
-
-        return DisplayList((
-                ('tsv',
-                    self.translate(msgid='vocabulary_tsv_text',
+        formats = [
+            ('tsv',
+                self.translate(msgid='vocabulary_tsv_text',
+                domain='ploneformgen',
+                default='Tab-Separated Values')
+                ),
+            ('csv',
+                self.translate(msgid='vocabulary_csv_text',
+                domain='ploneformgen',
+                default='Comma-Separated Values')
+                ),
+        ]
+        if has_xls:
+            formats.append(
+                ('xls',
+                    self.translate(msgid='vocabulary_xls_doc',
                     domain='ploneformgen',
-                    default='Tab-Separated Values')
+                    default='Excel document')
                     ),
-                ('csv',
-                    self.translate(msgid='vocabulary_csv_text',
-                    domain='ploneformgen',
-                    default='Comma-Separated Values')
-                    ),
-            ))
+            )
+        return DisplayList(formats)
 
 
 
